--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,22 @@
 	"version": "0.1.0",
     "command": "tsc",
 	"isShellCommand": true,
-	"showOutput": "silent",
-
-	// Tell the tsc compiler to use the tsconfig.json from the open folder.
-	"args": ["-p", "."],
-
-	// use the standard tsc problem matcher to find compile problems
-	// in the output.
-	"problemMatcher": "$tsc"
+	"suppressTaskName": true,
+	
+	"tasks": [
+		{
+			"taskName": "build",
+			"args": ["-p", "."],
+			"isBuildCommand": true,
+			"problemMatcher": "$tsc",
+			"showOutput": "silent"
+		},
+		{
+			"taskName": "test",
+			"args": ["-p", "test"],
+			"isTestCommand": true,
+			"problemMatcher": "$tsc",
+			"showOutput": "silent"
+		}
+	]
 }
