--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "tape": "^4.2.2",
     "faucet": "^0.0.1",
     "typescript": "^1.7.3",
-    "tsd": "^0.6.5"
+    "typings": "^0.6.2"
   },
 
   "scripts": {
     "build": "tsc",
     "smoketest": "node opal.js",
-    "tsd": "tsd install",
+    "typings": "typings install",
 
     "pretest": "node test/tsconfig.json",
     "test": "node test.js | faucet"
