--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,8 @@
     "target": "ES6",
     "out": "opal.js"
   },
-  "exclude": [
-    "node_modules",
-    "test",
-    "typings/browser",
-    "typings/browser.d.ts"
+  "files": [
+    "examples/schedule.ts",
+    "typings/main.d.ts"
   ]
 }
