Port second example to modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 node_modules/
 typings/
-opal.js
-opal.js.map
 docs/build/
 test.js
 
@@ -12,10 +10,9 @@ test.js
 bin/
 obj/
 
-# I can't figure out how to make Visual Studio stop generating per-file .js
-# outputs on save, even though I've instructed it to combine all TypeScript
-# into a single file.
+# Generated JavaScript for TypeScript sources.
 src/calendar.js
 src/opal.js
 src/pset.js
 examples/schedule.js
+examples/event_modify.js
