npm script for running new tests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "typings": "typings install",
 
     "pretest": "tsc -p test",
-    "test": "node test.js | faucet"
+    "test": "tape test/test_*.js | faucet"
   }
 }
