--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "target": "ES6",
-    "module": "commonjs"
+    "module": "commonjs",
+    "outDir": "build"
   },
   "files": [
     "src/opal.ts",
