--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
 		{
 			"name": "example",
 			"type": "node",
-			"program": "opal.js",
+			"program": "${workspaceRoot}/build/examples/schedule.js",
 			"stopOnEntry": false,
 			"request": "launch",
 			"args": [],
@@ -15,7 +15,7 @@
 		{
 			"name": "tests",
 			"type": "node",
-			"program": "test.js",
+			"program": "${workspaceRoot}/test/test_opal.js",
 			"stopOnEntry": false,
 			"request": "launch",
 			"args": [],
