--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
   "files": [
     "src/opal.ts",
     "src/calendar.ts",
+    "src/timezones.ts",
     "examples/schedule.ts",
     "examples/event_modify.ts",
     "typings/main.d.ts"
