--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
   },
   "files": [
     "src/opal.ts",
+    "src/office.ts",
     "src/calendar.ts",
     "src/timezones.ts",
     "examples/schedule.ts",
