--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "es6",
     "module": "commonjs",
     "outDir": "build"
   },
   "files": [
-    "bot.ts"
+    "bot.ts",
+    "typings/main.d.ts"
   ]
 }
