--- a/bot/package.json
+++ b/bot/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": "yes",
 
+  "bin": {
+    "opalbot": "build/bot/bot.js"
+  },
+
   "dependencies": {
     "botbuilder": "^0.8.0",
     "restify": "^4.0.4",
