--- a/bot/package.json
+++ b/bot/package.json
@@ -11,7 +11,10 @@
     "botbuilder": "^0.8.0",
     "restify": "^4.0.4",
     "minimist": "^1.2.0",
-    "chrono-node": "^1.2.1"
+    "chrono-node": "^1.2.1",
+
+    "ms-rest": "^1.12.0",
+    "botconnector": "^0.9.6"
   },
 
   "devDependencies": {
