--- a/bot/package.json
+++ b/bot/package.json
@@ -14,7 +14,8 @@
     "chrono-node": "^1.2.1",
 
     "ms-rest": "^1.12.0",
-    "botconnector": "^0.9.6"
+    "botconnector": "^0.9.6",
+    "basic-auth": "^1.0.3"
   },
 
   "devDependencies": {
