--- a/bot/package.json
+++ b/bot/package.json
@@ -12,6 +12,7 @@
     "restify": "^4.0.4",
     "minimist": "^1.2.0",
     "chrono-node": "^1.2.1",
+    "request": "^2.72.0",
 
     "basic-auth": "^1.0.3"
   },
