--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "examples/schedule.ts",
     "examples/event_modify.ts",
     "examples/schedule_workday.ts",
+    "examples/resolve_day.ts",
     "typings/main.d.ts"
   ]
 }
