--- a/bot/package.json
+++ b/bot/package.json
@@ -16,13 +16,11 @@
   },
 
   "devDependencies": {
-    "typescript": "^1.7.3",
-    "typings": "^0.6.2"
+    "typescript": "^1.7.3"
   },
 
   "scripts": {
     "build": "tsc",
-    "typings": "typings install",
     "serve": "node build/bot/bot.js",
     "run": "node build/bot/bot.js -t"
   }
