Turn on strict null checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "noImplicitAny": true,
     "target": "ES6",
     "module": "commonjs",
-    "outDir": "build"
+    "outDir": "build",
+    "strictNullChecks": true
   },
   "files": [
     "src/opal.ts",
