--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "src/office.ts",
     "src/calendar.ts",
     "src/timezones.ts",
+    "src/world.ts",
+    "src/feature.ts",
+    "src/util.ts",
     "examples/schedule.ts",
     "examples/event_modify.ts",
     "examples/schedule_workday.ts",
