--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "examples/schedule.ts",
     "examples/event_modify.ts",
     "examples/schedule_workday.ts",
-    "examples/resolve_day.ts"
+    "examples/resolve_day.ts",
+    "examples/simplefeat.ts"
   ]
 }
