--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES6",
     "module": "commonjs",
     "outDir": "build",
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "noImplicitThis": true
   },
   "files": [
     "src/opal.ts",
