--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+
     "target": "ES6",
     "module": "commonjs",
+
     "outDir": "build",
-    "strictNullChecks": true,
-    "noImplicitThis": true
+    "sourceMap": true
   },
   "files": [
     "src/opal.ts",
