Fix score length mismatch
Our zero value needed to have nonzero entries.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,8 @@
 			"program": "${workspaceRoot}/build/examples/simplefeat.js",
 			"request": "launch",
 			"args": [],
-			"cwd": "${workspaceRoot}"
+			"cwd": "${workspaceRoot}",
+			"sourceMaps": true
 		},
 		{
 			"name": "tests",
