--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "examples/schedule_workday.ts",
     "examples/resolve_day.ts",
     "examples/simplefeat.ts",
-    "examples/meetprep.ts"
+    "examples/meetprep.ts",
+
+    "examples/harry.ts"
   ]
 }
