Include declarations with build
This adds a few type system restrictions: namely, you have to export all the
names of types used in public interfaces.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "opal",
   "version": "0.0.1",
   "private": true,
+  "main": "build/src/opal.js",
 
   "dependencies": {
     "node-outlook": "^1.1.5",
