--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
+    "declaration": true,
 
     "target": "ES6",
     "module": "commonjs",
