track distributed opal code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "src/world.ts",
     "src/feature.ts",
     "src/util.ts",
+    "src/distributed.ts",
+    "src/either.ts",
+    "src/ivar.ts",
     "examples/schedule.ts",
     "examples/event_modify.ts",
     "examples/schedule_workday.ts",
